deploy: d0cf5af833fdc1f0350c8e15012e945999a6e811

--- a/messages/GHC-20125/index.html
+++ b/messages/GHC-20125/index.html
@@ -34,9 +34,9 @@
             <h1>Missing field(s) [GHC-20125]</h1>
             
 <p>
-  <i>Flag: <code>-Wmissing-fields</code></i>
+  <i>Flag: <code>-Wmissing-fields</code></i><br />
   
-  (on by default)
+  <i>Enabled by default</i>
   
 </p>
 
