--- a/messages/GHC-30606/index.html
+++ b/messages/GHC-30606/index.html
@@ -34,9 +34,9 @@
             <h1>Redundant constraints [GHC-30606]</h1>
             
 <p>
-  <i>Flag: <code>-Wredundant-constraints</code></i>
+  <i>Flag: <code>-Wredundant-constraints</code></i><br />
   
-  (included in <code>-Weverything</code>)
+  <i>Enabled by:</i> <code></code>
   
 </p>
 
