--- a/messages/GHC-62161/index.html
+++ b/messages/GHC-62161/index.html
@@ -34,9 +34,9 @@
             <h1>Incomplete patterns [GHC-62161]</h1>
             
 <p>
-  <i>Flag: <code>-Wincomplete-patterns</code></i>
+  <i>Flag: <code>-Wincomplete-patterns</code></i><br />
   
-  (included in <code>-W</code>)
+  <i>Enabled by:</i> <code>`-Wextra`</code>
   
 </p>
 
