--- a/messages/GHC-75356/index.html
+++ b/messages/GHC-75356/index.html
@@ -34,9 +34,9 @@
             <h1>Export item suggests constructors/methods [GHC-75356]</h1>
             
 <p>
-  <i>Flag: <code>-Wdodgy-imports</code></i>
+  <i>Flag: <code>-Wdodgy-imports</code></i><br />
   
-  (on by default)
+  <i>Enabled by:</i> <code>`-Wextra`</code>
   
 </p>
 
