--- a/messages/GHC-90584/index.html
+++ b/messages/GHC-90584/index.html
@@ -34,9 +34,9 @@
             <h1>Deriving `Typeable` has no effect [GHC-90584]</h1>
             
 <p>
-  <i>Flag: <code>-Wderiving-typeable</code></i>
+  <i>Flag: <code>-Wderiving-typeable</code></i><br />
   
-  (on by default)
+  <i>Enabled by:</i> <code></code>
   
 </p>
 
