--- a/messages/GHC-84077/index.html
+++ b/messages/GHC-84077/index.html
@@ -34,6 +34,8 @@
             <h1>Type application without space [GHC-84077]</h1>
             
 
+<p><i>Language extension: <code>TypeApplications</code></i></p>
+
 
 <p>Type application syntax requires a space before <code>@</code>. This is described in the <a href="https://ghc.gitlab.haskell.org/ghc/doc/users_guide/exts/type_applications.html#visible-type-application">documentation</a> of the visible type application feature.</p>
 
@@ -52,6 +54,30 @@
   |       ^^^^^</code></pre>
 
 <table width="100%">
+  
+  <tr><td colspan="2" class="filename"><pre>MissingSpaceTypeApplication.hs</pre></td></tr>
+  <tr>
+    <td width="50%" class="beforeafter">Before</td>
+    <td width="50%" class="beforeafter">After</td>
+  </tr>
+  <tr>
+    <td>
+      <pre><code class="language-haskell">{-# LANGUAGE TypeApplications #-}
+
+ module MissingSpaceTypeApplication where
+
+ f :: (forall a. a -> b) -> (Int -> b)
+ f x = x@Int</code></pre>
+    </td>
+    <td>
+      <pre><code class="language-haskell">{-# LANGUAGE TypeApplications #-}
+
+ module MissingSpaceTypeApplication where
+
+ f :: (forall a. a -> b) -> (Int -> b)
+ f x = x @Int</code></pre>
+    </td>
+  </tr>
   
 </table>
 
