--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             </div>
             <nav>
                 <a href="./">Home</a>
-                <a href="./messages/">Messages</a>
                 <a href="./contact.html">Contact</a>
             </nav>
         </header>
@@ -274,6 +273,13 @@
             <td>GHC-95644</td>
             <td><a href="./messages/GHC-95644/index.html">Missing space after exclamation mark `!`</a></td>
             <td>Bang pattern in expression context.</td>
+            <td>9.6.1</td>
+        </tr>
+    
+        <tr>
+            <td>GHC-95781</td>
+            <td><a href="./messages/GHC-95781/index.html">Invalid type application</a></td>
+            <td>The expression cannot be applied to the given type argument.</td>
             <td>9.6.1</td>
         </tr>
     
