--- a/messages/GHC-11861/index.html
+++ b/messages/GHC-11861/index.html
@@ -31,8 +31,10 @@
             <h1>Empty single quotes [GHC-11861]</h1>
             
 
+<p><i>Language extension: <code>TemplateHaskell</code></i></p>
 
-<p>Single quotes are used for character and literals including “new line” (), “carriage return” (, “horizontal tab” (, and “vertical tab” (. The complete list of character escapes is described in <a href="https://www.haskell.org/onlinereport/lexemes.html">the Haskell Report</a> section 2.6, Character and String Literals. Character literals cannot be empty.</p>
+
+<p>Single quotes are used for character and literals including “new line” (\n), “carriage return” (\r), “horizontal tab” (\t), and “vertical tab” (\v). The complete list of character escapes is described in <a href="https://www.haskell.org/onlinereport/lexemes.html">the Haskell Report</a> section 2.6, Character and String Literals. Character literals cannot be empty.</p>
 <p>Another usage of single quotes is in TemplateHaskell, please refer to the <a href="https://downloads.haskell.org/ghc/latest/docs/html/users_guide/exts/template_haskell.html#syntax">GHC documentation</a> for details.</p>
 <h2 id="example-error-text">Example error text</h2>
 <pre><code> error: [GHC-11861]
