deploy: eb71be0bebd7de99984375c8d4f40be63330153f

--- a/index.html
+++ b/index.html
@@ -263,6 +263,13 @@
         </tr>
     
         <tr>
+            <td>GHC-90177</td>
+            <td><a href="./messages/GHC-90177/index.html">Orphan instance</a></td>
+            <td>An instance was defined separately from its type or class.</td>
+            <td>9.6.1</td>
+        </tr>
+    
+        <tr>
             <td>GHC-90584</td>
             <td><a href="./messages/GHC-90584/index.html">Deriving `Typeable` has no effect</a></td>
             <td>The type class `Typeable` does not need to be derived.</td>
