deploy: 1bb78d133bb3e4dc0ed157eabbb19fa3baf2aaf4

--- a/messages/GHC-01629/index.html
+++ b/messages/GHC-01629/index.html
@@ -38,7 +38,7 @@ type variables in a type. For instance, if a type has only 1 type parameter (e.g
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Too many type arguments in constructor pattern</summary>
   <div class="example-container">
     <p>The <code>@Bool</code> is too much in this example. There is nothing to bind to it, so it is not allowed to be there.</p>
