--- a/messages/GHC-05989/index.html
+++ b/messages/GHC-05989/index.html
@@ -39,7 +39,7 @@ are specified in a corresponding standalone kind signature.</p>
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Mismatched data declaration</summary>
   <div class="example-container">
     <h2 id="error-message">Error Message</h2>
