--- a/messages/GHC-10190/index.html
+++ b/messages/GHC-10190/index.html
@@ -36,7 +36,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>An enumeration where the lower bound is greater than the upper bound</summary>
   <div class="example-container">
     <h2 id="warning-message">Warning message</h2>
