--- a/messages/GHC-11913/index.html
+++ b/messages/GHC-11913/index.html
@@ -37,7 +37,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Deriving Int</summary>
   <div class="example-container">
     <h2 id="error-message">Error Message</h2>
@@ -79,7 +79,7 @@ data Example = Example
   </div>
 </details>
 
-<details>
+<details open="open">
   <summary>Lowercase type class name</summary>
   <div class="example-container">
     <h2 id="error-message">Error message</h2>
