--- a/messages/GHC-20125/index.html
+++ b/messages/GHC-20125/index.html
@@ -44,7 +44,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Uninitialized record field</summary>
   <div class="example-container">
     <p>The field <code>c</code> of the record Rec is not initialized.</p>
