--- a/messages/GHC-20825/index.html
+++ b/messages/GHC-20825/index.html
@@ -36,7 +36,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>No fields updated</summary>
   <div class="example-container">
     <h2 id="message">Message</h2>
