--- a/messages/GHC-25078/index.html
+++ b/messages/GHC-25078/index.html
@@ -36,7 +36,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Invalid operator precedence</summary>
   <div class="example-container">
     <p>An operator’s precedence must be <code>1 &lt;= x &lt;= 9</code>.</p>
