--- a/messages/GHC-27207/index.html
+++ b/messages/GHC-27207/index.html
@@ -44,7 +44,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Missing space after tilde `~`</summary>
   <div class="example-container">
     <p>There is no space after the tilde character <code>~</code>.</p>
