--- a/messages/GHC-30606/index.html
+++ b/messages/GHC-30606/index.html
@@ -44,7 +44,7 @@ constraints that are unnecessary.</p>
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Redundant equality constraints</summary>
   <div class="example-container">
     <h2 id="error-message">Error Message</h2>
@@ -95,7 +95,7 @@ f x = x
   </div>
 </details>
 
-<details>
+<details open="open">
   <summary>Redundant typeclass constraints</summary>
   <div class="example-container">
     <h2 id="error-message">Error Message</h2>
