--- a/messages/GHC-39999/index.html
+++ b/messages/GHC-39999/index.html
@@ -37,7 +37,7 @@ This most commonly happens for two reasons: Either the type is to polymorphic (i
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>A usage of (==) on a data type which doesn‘t have an instance for Eq.</summary>
   <div class="example-container">
     <h2 id="error-message">Error message</h2>
@@ -81,7 +81,7 @@ isA foo = foo == A
   </div>
 </details>
 
-<details>
+<details open="open">
   <summary>A usage of `+` on a too polymorphic variable.</summary>
   <div class="example-container">
     <h2 id="error-message">Error message</h2>
