--- a/messages/GHC-47535/index.html
+++ b/messages/GHC-47535/index.html
@@ -36,7 +36,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Identifier is a top-level binding, not a record selector</summary>
   <div class="example-container">
     <p>The identifier <code>foo</code> is used as a record selector, but is never declared as such.
@@ -83,7 +83,7 @@ foo x = x { bar = 1 }
   </div>
 </details>
 
-<details>
+<details open="open">
   <summary>Identifier is a class method, not a record selector</summary>
   <div class="example-container">
     <p>The identifier <code>foo</code> is used as a record selector, but it refers to a function of the <code>Foo</code> class instead.
