--- a/messages/GHC-47854/index.html
+++ b/messages/GHC-47854/index.html
@@ -43,7 +43,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Duplicate export</summary>
   <div class="example-container">
     <p>The module <code>Example</code> mentions the symbol <code>answer</code> twice in its export list.</p>
@@ -84,7 +84,7 @@ answer = 42
   </div>
 </details>
 
-<details>
+<details open="open">
   <summary>Duplicate field export</summary>
   <div class="example-container">
     <p>The module <code>Example</code> exports the symbol <code>answer</code> twice.
