--- a/messages/GHC-48099/index.html
+++ b/messages/GHC-48099/index.html
@@ -36,7 +36,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Top-level strict bindings</summary>
   <div class="example-container">
     <h2 id="message">Message</h2>
@@ -75,7 +75,7 @@ x = 5
   </div>
 </details>
 
-<details>
+<details open="open">
   <summary>Unlifted top-level binding</summary>
   <div class="example-container">
     <h2 id="message">Message</h2>
