--- a/messages/GHC-56538/index.html
+++ b/messages/GHC-56538/index.html
@@ -42,7 +42,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Typo: lower-case class name</summary>
   <div class="example-container">
     <h2 id="error-message">Error Message</h2>
