--- a/messages/GHC-62016/index.html
+++ b/messages/GHC-62016/index.html
@@ -43,7 +43,7 @@ If this procedure fails, the error message appears.</p>
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Deriving Functor for a type with an argument of non-Type kind</summary>
   <div class="example-container">
     <h2 id="error-message">Error message</h2>
@@ -83,7 +83,7 @@ data AppliedToInt f = AppliedToInt (f Int)
   </div>
 </details>
 
-<details>
+<details open="open">
   <summary>Deriving Functor for a ground type</summary>
   <div class="example-container">
     <h2 id="error-message">Error message</h2>
