--- a/messages/GHC-62161/index.html
+++ b/messages/GHC-62161/index.html
@@ -44,7 +44,7 @@ result in a run-time crash of the program.</p>
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Sum of a list</summary>
   <div class="example-container">
     <p>The case for the empty list is missing.</p>
@@ -88,7 +88,7 @@ mySum [] = 0
   </div>
 </details>
 
-<details>
+<details open="open">
   <summary>Safe head of a list</summary>
   <div class="example-container">
     <p>The case for the empty list is missing, and for a safe version of head, the return type has to be changed.</p>
