--- a/messages/GHC-69158/index.html
+++ b/messages/GHC-69158/index.html
@@ -40,7 +40,7 @@ re-exported using the <code>module</code> keyword.</p>
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Name clash due to mix of qualified and unqualified re-export</summary>
   <div class="example-container">
     <h2 id="error-message">Error Message</h2>
