--- a/messages/GHC-69925/index.html
+++ b/messages/GHC-69925/index.html
@@ -36,7 +36,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Illegal unboxed string literal in pattern</summary>
   <div class="example-container">
     <p>When pattern matching, unboxed string literals (with the <code>MagicHash</code> postfix) are not allowed.</p>
