--- a/messages/GHC-77037/index.html
+++ b/messages/GHC-77037/index.html
@@ -43,7 +43,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Importing Data.Maybe (Maybe(..))</summary>
   <div class="example-container">
     <p>In the example, the import statement brings all the constructors of the <code>Maybe</code> data type into scope, without mentioning them explicitly.
