--- a/messages/GHC-88464/index.html
+++ b/messages/GHC-88464/index.html
@@ -39,7 +39,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Attempted to refer to another function's argument</summary>
   <div class="example-container">
     <h2 id="error-message">Error Message</h2>
