--- a/messages/GHC-90584/index.html
+++ b/messages/GHC-90584/index.html
@@ -44,7 +44,7 @@ Deriving <code>Typeable</code> is not necessary as all types automatically deriv
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Deriving ‘Typeable’ has no effect</summary>
   <div class="example-container">
     <h2 id="error-message">Error Message</h2>
