--- a/messages/GHC-95644/index.html
+++ b/messages/GHC-95644/index.html
@@ -43,7 +43,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Missing space after exclamation `!`</summary>
   <div class="example-container">
     <p>There is no space after the exclamation mark character <code>!</code>.</p>
