--- a/messages/GHC-46956/index.html
+++ b/messages/GHC-46956/index.html
@@ -36,7 +36,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>An escaping kind variable</summary>
   <div class="example-container">
     <h2 id="error-message">Error Message</h2>
