--- a/messages/GHC-62330/index.html
+++ b/messages/GHC-62330/index.html
@@ -37,7 +37,7 @@ If the <code>NoNumericUnderscores</code> extension is enabled or <code>NumericUn
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Underscore not allowed in float literal</summary>
   <div class="example-container">
     <p>Float literals may not contain underscores if the <code>NoNumericUnderscores</code> language extension is enabled.
@@ -86,7 +86,7 @@ f _   = ()
   </div>
 </details>
 
-<details>
+<details open="open">
   <summary>Underscore not allowed in integer literal</summary>
   <div class="example-container">
     <p>Integer literals may not contain underscores if the <code>NoNumericUnderscores</code> language extension is enabled.
