--- a/messages/GHC-71614/index.html
+++ b/messages/GHC-71614/index.html
@@ -37,7 +37,7 @@ A lambda expression of the form <code>\ -&gt; ...</code> causes this error.</p>
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Empty parameter list in lambda</summary>
   <div class="example-container">
     <p>The parameter list of a lambda expression must contain at least one parameter, but here it is empty.</p>
