--- a/messages/GHC-84077/index.html
+++ b/messages/GHC-84077/index.html
@@ -38,7 +38,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Missing space before type application</summary>
   <div class="example-container">
     <p>There is no space before the type application <code>@Int</code>.</p>
@@ -81,7 +81,7 @@
   </div>
 </details>
 
-<details>
+<details open="open">
   <summary>Missing space in type application</summary>
   <div class="example-container">
     <h2 id="error-message">Error Message</h2>
