--- a/messages/GHC-95909/index.html
+++ b/messages/GHC-95909/index.html
@@ -38,7 +38,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Missing strict field in record syntax</summary>
   <div class="example-container">
     <p>The instantiation of a strict field in a record is missing. In <code>aFine</code>, we can leave one field uninstantiated as it is not strict, and therefore is not evaluated until needed, due to lazy evaluation. However in <code>aBad</code> we cannot, as the field <code>a</code> is strict.</p>
@@ -96,7 +96,7 @@ aFixed = A { a = True, b = 5 }
   </div>
 </details>
 
-<details>
+<details open="open">
   <summary>All fields are strict if the StrictData language extension is enabled</summary>
   <div class="example-container">
     <p>When using the language extension <code>{-# LANGUAGE Strict #-}</code> or <code>{-# LANGUAGE StrictData #-}</code>, all fields are strict, even if we do not explicitly use the strictness flag <code>!</code>. Thus, we must instantiate all fields on construction.</p>
