--- a/messages/GHC-99623/index.html
+++ b/messages/GHC-99623/index.html
@@ -43,7 +43,7 @@
 
 <h2>Examples</h2>
 
-<details>
+<details open="open">
   <summary>Import item suggests constructors/methods</summary>
   <div class="example-container">
     <p>When importing <code>TypeWithoutVisibleCtrs</code> from <code>module HiddenConstructors</code>, the import list item in <code>module DodgyImports</code> suggests that this type has associated in-scope constructor(s). However it does not (the constructors are out of scope). The same is true of <code>TypeWithNoCtrs</code>; the import item suggests it has constructors whereas it has none (either in or out of scope).</p>
